--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -18,10 +18,10 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
-    "serve": "firebase -P trial-gs emulators:start --only functions",
-    "shell": "firebase -P trial-gs functions:shell",
+    "serve": "firebase -P navimate-4468c emulators:start --only functions",
+    "shell": "firebase -P navimate-4468c functions:shell",
     "start": "npm run shell",
-    "logs": "firebase -P trial-gs functions:log",
+    "logs": "firebase -P navimate-4468c functions:log",
     "compile": "cp ../../tsconfig.template.json ./tsconfig-compile.json && tsc --project tsconfig-compile.json"
   },
   "engines": {
