--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBuqvgNqfmxdhP1mc6r5BTwIjE4ELzD_4E</string>
+	<string>AIzaSyBe1yNOBocMYV0ZJ2SCWeLrUtcQcGy-d8o</string>
 	<key>GCM_SENDER_ID</key>
-	<string>69787231510</string>
+	<string>834455485925</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.mycompany.justtriallll</string>
 	<key>PROJECT_ID</key>
-	<string>trial-gs</string>
+	<string>navimate-4468c</string>
 	<key>STORAGE_BUCKET</key>
-	<string>trial-gs.appspot.com</string>
+	<string>navimate-4468c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:69787231510:ios:e21c4823cfd214351a1c37</string>
+	<string>1:834455485925:ios:b787cf5350475d5cba430c</string>
 </dict>
 </plist>
