--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,12 +58,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>In order to search nearby, this app requires access to your current location.</string>
 	<key>NSCameraUsageDescription</key>
     <string>In order to take a picture or video, this app requires permission to access the camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
     <string>In order to upload data, this app requires permission to access the photo library.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-    <string>In order to find location, this app requires permission to access the location.</string>
+
     <key>UIBackgroundModes</key>
     <array>
         <string>fetch</string>
