--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dependencies:
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   functions_client: 1.3.2
+  geolocator: 10.1.0
+  geolocator_android: 4.4.0
+  geolocator_apple: 2.3.2
+  geolocator_platform_interface: 4.2.0
+  geolocator_web: 2.2.0
   go_router: 12.1.3
   google_fonts: 6.1.0
   google_maps: 6.3.0
